fixed triangle spacing on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ nav .nav-links a {
   width: 125px;
   height: 125px;
   float: left;
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 .triangle-A, .triangle-B {
